<?xml version="1.0"?>
<package>
  <name>node_alive</name>
  <version>0.0.0</version>
  <description>Node_alive is a watchdog for the nodes that are still alive. 'node_alive_server' checks if all nodes in the node_list are still alive. Nodes can be added to the node_list with use of 'node_alive_add [launch_file]'. 'node_alive_add' scans recursively through all nodes that are being launched with use of the specified launch file and adds these to the node_list.</description>

  <maintainer email="reinzor@gmail.com">Rein Appeldoorn</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
